* add a main() to TunnelControllerGroup which can be used as a clientApp.* * new config property to have a tunnel start on load (default=true), so tunnels, er, start on load * use i2ptunnel.config instead of i2ptunnel.cfg (for consistency) * minor refactoring
Monotone-Parent: e6aad932c26245b94daaef22fe4898b9b3400a26
Monotone-Revision: 3f51d2fa2be9f07b5a0500b13d68c15bc58c0fdb

Monotone-Author: jrandom
Monotone-Date: 2004-08-14T02:03:45
Monotone-Branch: i2p.i2p

--- a/installer/java/src/router.config.template
+++ b/installer/java/src/router.config.template
@@ -148,6 +148,14 @@ clientApp.1.args=-nocli -e "config localhost ##_router_i2cp_port##" -e "httpclie
 #       -e "listen_on 0.0.0.0"   
 # before the -e "httpclient 4444".  otherwise, both of these proxies will only listen for connections on 127.0.0.1
 
+# The following three lines replace the clientApp.1.* lines above, for use with the new router console.
+# It loads up all of the tunnels (2 minutes later, giving the router time to boot), and starts any defined with
+# startOnLoad.  It can be further controlled at http://localhost:7657/i2ptunnel/
+#
+#clientApp.1.main=net.i2p.i2ptunnel.TunnelControllerGroup
+#clientApp.1.name=Tunnels
+#clientApp.1.args=i2ptunnel.config
+
 # New router console webapp, driven by Jetty
 # to use, you must mkdir ./webapps/ and place the routerconsole.war file in there,
 # and add jetty-all.jar and routerconsole.jar in the router's classpath in the startRouter 
