added the new GUI installer and associated build tasks
Monotone-Parent: 890a3a702f03672095b0a311103f51789ecb74b6
Monotone-Revision: 32a5e42d981abc84d3088c3cfebf5466be759a0b

Monotone-Author: hypercubus
Monotone-Date: 2004-08-17T20:43:11
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -142,7 +142,7 @@
         <echo message="routerconsole.war file under your i2p install dir as webapps/routerconsole.war and will want " />
         <echo message="to add the RouterConsoleRunner to the router's clientApp list (it must be in the router's JVM)" />
     </target>
-    <target name="pkg" depends="tarball" /> <!-- <target name="pkg" depends="tarball, installer" /> -->
+    <target name="pkg" depends="tarball, installer" />
     <target name="pkgclean">
         <delete dir="pkg-temp" />
         <delete>
@@ -179,11 +179,8 @@
             <tarfileset dir="pkg-temp" includes="**/*" prefix="i2p" />
         </tar>
     </target>
-    <!-- <target name="installer" depends="preppkg">
-        <izpack input="installer/install.xml"
-                output="install.jar"
-                installerType="standard"
-                basedir="installer"
-                izPackDir="installer" />
-    </target> -->
+    <taskdef name="izpack" classpath="${basedir}/installer/lib/standalone-compiler.jar" classname="com.izforge.izpack.ant.IzPackTask" />
+    <target name="installer" depends="preppkg">
+        <izpack input="${basedir}/installer/install.xml" output="${basedir}/install.jar" installerType="standard" basedir="${basedir}" />
+    </target>
 </project>
