* service wrapper fully functioning under Linux and WinXP, should also be working for the other *nix platforms but this isn't tested yet * renaming wrapper binaries to 'i2psvc' for *nix and 'I2Psvc.exe' for win32
Monotone-Parent: e27345adc889bba6bf57606e1ab9897d4e234790
Monotone-Revision: ff3176eb6bda83f77bfddf13c9bae617a90f78f0

Monotone-Author: hypercubus
Monotone-Date: 2004-08-19T05:41:36
Monotone-Branch: i2p.i2p

--- a/installer/lib/wrapper/wrapper.conf
+++ b/installer/lib/wrapper/wrapper.conf
@@ -47,7 +47,7 @@ wrapper.java.library.path.2=lib
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=net.i2p.router.Router
 wrapper.app.parameter.2=--quiet
-wrapper.app.parameter.3=> /dev/null &
+wrapper.app.parameter.3=> /dev/null
 
 #********************************************************************
 # Wrapper Logging Properties
@@ -59,7 +59,7 @@ wrapper.console.format=PM
 wrapper.console.loglevel=INFO
 
 # Log file to use for wrapper output logging.
-wrapper.logfile=../logs/wrapper.log
+wrapper.logfile=logs/wrapper.log
 
 # Format of output for the log file.  (See docs for formats)
 wrapper.logfile.format=LPTM
