a little tidying up
Monotone-Parent: 5465d135a8ff49a0e3beaf713b970b24d616765b
Monotone-Revision: 251570f406e593e00695e656ba81245ed53262b8

Monotone-Author: jrandom
Monotone-Date: 2004-08-19T20:27:35
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -63,6 +63,10 @@
                 <pathelement location="build/routerconsole.jar" />
             </classpath>
         </javac>
+        <delete>
+            <fileset dir="../jsp/WEB-INF/" includes="**/*.java" />
+            <fileset dir="../jsp/WEB-INF/" includes="**/*.jsp" />
+        </delete>
         <copy file="../jsp/web.xml" tofile="../jsp/web-out.xml" />
         <loadfile property="jspc.web.fragment" srcfile="../jsp/web-fragment.xml" />
         <replace file="../jsp/web-out.xml">
