--- a/build.xml
+++ b/build.xml
@@ -10,8 +10,7 @@
         <echo message="  dist:      distclean, then build and javadoc (including the web app and associated libs)" />
         <echo message="  prepGUI:   pull the LGPL and APL code for JFreeChart that we use in the GUIs" />
         <echo message="  buildGUI:  build the heartbeat and netmonitor GUIs (must have run prepGUI already)" />
-        <echo message="  prepWEB:   pull down the Jetty libraries and whatever they depend on for the router console web application" />
-        <echo message="  buildWEB:  build the router console web application (depends upon prepWEB)" />
+        <echo message="  buildWEB:  build the router console web application" />
         <echo message="  pkg:       make the tarball and installer jar (depends upon preppkg)" />
         <echo message="  pkgclean:  delete the ./pkg-temp/ dir, tarball and installer jar" />
         <echo message="  preppkg:   gather built files for tarball and installer (depends upon prepWEB)" />
@@ -19,7 +18,7 @@
         <echo message="  installer: build the GUI installer (depends upon preppkg)" />
     </target>
     <target name="dist" depends="distclean, build, buildWEB, javadoc" />
-    <target name="build" depends="builddep, jar" />
+    <target name="build" depends="builddep, jar, buildWEB" />
     <target name="buildclean" depends="distclean, build" />
     <target name="builddep">
 	<!-- build *everything* here, but only once -->
@@ -63,7 +62,7 @@
             splitindex="true" 
             windowtitle="I2P" />
     </target>
-    <target name="clean">
+    <target name="clean" depends="pkgclean" >
         <delete dir="./build" />
     </target>
     <target name="distclean" depends="clean">
@@ -120,7 +119,7 @@
     <target name="prepWEB">
         <ant dir="apps/jetty" target="fetchJettylib" />
     </target>
-    <target name="buildWEB" >
+    <target name="buildWEB" depends="prepWEB" >
         <available property="jettylib.available" file="apps/jetty/jettylib" />
         <ant target="doBuildWEB" />
     </target>
@@ -171,7 +170,8 @@
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="installer/java/src/i2ptunnel.config" todir="pkg-temp/" />
+        <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
+        <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="readme.txt" todir="pkg-temp/" />
     </target>
     <target name="tarball" depends="preppkg">
