properly clean up the temp files (thanks oOo)
Monotone-Parent: 1ef05d9d621d567f01f5b7873cad45dabf8d0061
Monotone-Revision: f26e58acbacbc5563f3007ea4a162e652588869a

Monotone-Author: jrandom
Monotone-Date: 2004-08-19T23:46:56
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -33,8 +33,8 @@
     </target>
     <target name="precompilejsp">
         <delete dir="../jsp/WEB-INF/" />
-        <delete dir="../jsp/web-fragment.xml" />
-        <delete dir="../jsp/web-out.xml" />
+        <delete file="../jsp/web-fragment.xml" />
+        <delete file="../jsp/web-out.xml" />
         <mkdir dir="../jsp/WEB-INF/" />
         <mkdir dir="../jsp/WEB-INF/classes" />
         <!-- there are various jspc ant tasks, but they all seem a bit flakey -->
