adding clientApp parameter to pass the user's preferred browser into systray
Monotone-Parent: 06413c99499a90db60f4cb040d7383b1b3279607
Monotone-Revision: ef8bb534685a31b5534ecf09b59e583390f7f9bd

Monotone-Author: hypercubus
Monotone-Date: 2004-08-20T14:38:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/clients.config
+++ b/installer/resources/clients.config
@@ -17,4 +17,5 @@ clientApp.2.args=i2ptunnel.config
 # kickstart the systray (currently only works on Win32 and KDE)
 clientApp.3.main=net.i2p.apps.systray.SysTray
 clientApp.3.name=Systray
+clientApp.3.args=browser default
 clientApp.3.onBoot=true
