toss the new precompiled & self detecting jbigi/jcpuid code into cvs and packaged in the new installer as lib/jbigi.jar
Monotone-Parent: cd9f8df49e46e5ea6b0cb007fe58dbbab7f697c3
Monotone-Revision: 1f766cb7f75f207e3fd46294e4428ba04d786763

Monotone-Author: jrandom
Monotone-Date: 2004-08-21T18:03:45
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -91,6 +91,7 @@
         <copy file="installer/java/build/install.jar" todir="build/" />
         <copy file="installer/java/build/guiinstall.jar" todir="build/" />
         <copy file="installer/java/build/fetchseeds.jar" todir="build/" />
+        <copy file="installer/lib/jbigi/jbigi.jar" todir="build" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
@@ -206,6 +207,7 @@
         <copy file="build/sam.jar" todir="pkg-temp/lib/" />
         <copy file="build/xercesImpl.jar" todir="pkg-temp/lib/" />
         <copy file="build/xml-apis.jar" todir="pkg-temp/lib/" />
+        <copy file="build/jbigi.jar" todir="pkg-temp/lib" />
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
