changed some filenames and updated credits in comment headers
Monotone-Parent: 8619c0508022d8597ab2338c2bafb9814ba17f81
Monotone-Revision: 65284632b2eb909e228b4ec20ccc84eba9fa0d70

Monotone-Author: hypercubus
Monotone-Date: 2004-08-22T13:59:01
Monotone-Branch: i2p.i2p

--- a/apps/bogobot/build.xml
+++ b/apps/bogobot/build.xml
@@ -5,9 +5,10 @@
 <!--                                                            -->
 <!-- build.xml                                                  -->
 <!-- 2004 The I2P Project                                       -->
+<!-- http://www.i2p.net                                         -->
 <!-- This code is public domain.                                -->
 <!--                                                            -->
-<!-- author hypercubus, oOo                                     -->
+<!-- authors: hypercubus, oOo                                   -->
 <!-- version 0.4                                                -->
 <!-- ********************************************************** -->
 
