* added in the systray jars * added loggerFilenameOverride * removed --quiet parameter (it was bogus anyway ;)
Monotone-Parent: b0c2cd9d67f237aa51fe969f1385b314bb3cfab5
Monotone-Revision: d14e0f6ad8a1d1e6361f72d5a0528830a8f4a81c

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T17:48:44
Monotone-Branch: i2p.i2p

--- a/installer/lib/wrapper/wrapper.conf
+++ b/installer/lib/wrapper/wrapper.conf
@@ -30,13 +30,15 @@ wrapper.java.classpath.15=lib/timestamper.jar
 wrapper.java.classpath.16=lib/wrapper.jar
 wrapper.java.classpath.17=lib/xercesImpl.jar
 wrapper.java.classpath.18=lib/xml-apis.jar
+wrapper.java.classpath.19=lib/systray.jar
+wrapper.java.classpath.20=lib/systray4j.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=.
 wrapper.java.library.path.2=lib
 
 # Java Additional Parameters
-#wrapper.java.additional.1=
+wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
 
 # Initial Java Heap Size (in MB)
 #wrapper.java.initmemory=4
@@ -46,7 +48,6 @@ wrapper.java.library.path.2=lib
 
 # Application parameters.  Add parameters as needed starting from 1
 wrapper.app.parameter.1=net.i2p.router.Router
-wrapper.app.parameter.2=--quiet
 
 #********************************************************************
 # Wrapper Logging Properties
