* drop libsystray4j.so (for now) * add some more targets (cleandep and distclean)
Monotone-Parent: 54b70ee79ba8ceb3e49075e8bf32a9298051b9ff
Monotone-Revision: 6e6167897084605d31878a08951faff50fc87ab3

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T21:28:25
Monotone-Branch: i2p.i2p

--- a/apps/systray/java/build.xml
+++ b/apps/systray/java/build.xml
@@ -20,7 +20,7 @@
     </target>
     <target name="jar" depends="compile">
         <copy todir="./build/lib">
-            <fileset dir="./lib" includes="libsystray4j.so systray4j.dll systray4j.jar" />
+            <fileset dir="./lib" includes="systray4j.dll systray4j.jar" />
         </copy>
         <copy todir="./build/icons">
             <fileset dir="./resources/" />
@@ -51,5 +51,12 @@
     </target>
     <target name="clean">
         <delete dir="./build" />
+    </target>
+    <target name="cleandep" depends="clean">
+	<!-- router will clean core -->
+        <ant dir="../../../core/java/" target="cleandep" />
+    </target>
+    <target name="distclean" depends="clean">
+        <ant dir="../../../core/java/" target="distclean" />
     </target>
 </project>
