* add "dump threads" * hook in to the service manager and let it know we're exiting gracefully (when appropriate) * commented out but generally functional systray integration.  i cant get it to build sometimes though, something is b0rking up
Monotone-Parent: 6e6167897084605d31878a08951faff50fc87ab3
Monotone-Revision: ec5f1121753f322d4ba3c5de3d5c42deb8af75e8

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T21:32:24
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/java/build.xml
+++ b/apps/routerconsole/java/build.xml
@@ -4,6 +4,7 @@
     <target name="build" depends="builddep, jar" />
     <target name="builddep">
         <ant dir="../../../router/java/" target="build" />
+        <!-- <ant dir="../../systray/java/" target="build" /> -->
 	<!-- router will build core -->
     </target>
     <target name="prepare">
@@ -15,8 +16,16 @@
         <javac 
             srcdir="./src" 
             debug="true" deprecation="on" source="1.3" target="1.3" 
-            destdir="./build/obj" 
-            classpath="../../../core/java/build/i2p.jar:../../../router/java/build/router.jar:../../jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" />
+            destdir="./build/obj">
+            <classpath>
+                <pathelement location="../../../core/java/build/i2p.jar" />
+                <pathelement location="../../../router/java/build/router.jar" />
+                <pathelement location="../../jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" />
+                <!-- <pathelement location="../../systray/java/build/lib/systray.jar" /> -->
+                <!-- <pathelement location="../../systray/java/lib/systray4j.jar" /> -->
+                <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" /> <!-- we dont care if we're not on win32 -->
+            </classpath>
+        </javac>
     </target>
     <target name="jar" depends="compile">
         <jar destfile="./build/routerconsole.jar" basedir="./build/obj" includes="**/*.class">
@@ -44,6 +53,8 @@
                 <pathelement location="../../jetty/jettylib/jasper-runtime.jar" />
                 <pathelement location="../../jetty/jettylib/javax.servlet.jar" />
                 <pathelement location="../../jetty/jettylib/ant.jar" />
+                <pathelement location="../../systray/java/build/obj" />
+                <pathelement location="../../../installer/lib/wrapper/win32/wrapper.jar" /> <!-- we dont care if we're not on win32 -->
                 <pathelement location="build/routerconsole.jar" />
             </classpath>
             <arg value="-d" />
@@ -88,10 +99,12 @@
     </target>
     <target name="cleandep" depends="clean">
 	<!-- router will clean core -->
-        <ant dir="../../../router/java/" target="distclean" />
+        <ant dir="../../../router/java/" target="cleandep" />
+        <!-- <ant dir="../../systray/java/" target="cleandep" /> -->
     </target>
     <target name="distclean" depends="clean">
 	<!-- router will clean core -->
         <ant dir="../../../router/java/" target="distclean" />
+        <!-- <ant dir="../../systray/java/" target="distclean" /> -->
     </target>
 </project>
