* control the on_exit so we can shutdown gracefully (except OOMs, when we auto-restart) * other minor wrapper details
Monotone-Parent: 09d4eeb8008695cd12aa3571138de8decbceff04
Monotone-Revision: 71343819bcd8e6548b4c9963b1e4555720bf3e90

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T21:36:31
Monotone-Branch: i2p.i2p

--- a/installer/lib/wrapper/wrapper.conf
+++ b/installer/lib/wrapper/wrapper.conf
@@ -71,14 +71,39 @@ wrapper.logfile.loglevel=INFO
 #  the log is rolled. Size is specified in bytes.  The default value
 #  of 0, disables log rolling.  May abbreviate with the 'k' (kb) or
 #  'm' (mb) suffix.  For example: 10m = 10 megabytes.
-wrapper.logfile.maxsize=0
+wrapper.logfile.maxsize=1m
 
 # Maximum number of rolled log files which will be allowed before old
 #  files are deleted.  The default value of 0 implies no limit.
-wrapper.logfile.maxfiles=0
+wrapper.logfile.maxfiles=2
 
 # Log Level for sys/event log output.  (See docs for log levels)
 wrapper.syslog.loglevel=NONE
+
+# choose what to do if the JVM kills itself based on the exit code
+wrapper.on_exit.default=SHUTDOWN
+wrapper.on_exit.0=SHUTDOWN
+wrapper.on_exit.1=SHUTDOWN
+# OOM
+wrapper.on_exit.10=RESTART
+# graceful shutdown
+wrapper.on_exit.2=SHUTDOWN
+# hard shutdown
+wrapper.on_exit.3=SHUTDOWN
+
+# the router may take a few seconds to save state, etc
+wrapper.jvm_exit.timeout=60
+
+# the router may take a few seconds to save state, etc
+wrapper.jvm_exit.timeout=30
+
+# give the OS 30s to clear all the old sockets / etc before restarting
+#wrapper.restart.delay=30
+
+# use the wrapper's internal timer thread.  otherwise this would 
+# force a restart of the router during daylight savings time as well
+# as any time that the OS clock changes
+wrapper.use_system_time=false
 
 #********************************************************************
 # Wrapper NT Service Properties
