added jbigi.jar, remoed systray jars
Monotone-Parent: 71343819bcd8e6548b4c9963b1e4555720bf3e90
Monotone-Revision: ce6e11d872d0416915641e1e138738478670ce95

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T21:49:39
Monotone-Branch: i2p.i2p

--- a/installer/lib/wrapper/wrapper.conf
+++ b/installer/lib/wrapper/wrapper.conf
@@ -30,8 +30,7 @@ wrapper.java.classpath.15=lib/timestamper.jar
 wrapper.java.classpath.16=lib/wrapper.jar
 wrapper.java.classpath.17=lib/xercesImpl.jar
 wrapper.java.classpath.18=lib/xml-apis.jar
-wrapper.java.classpath.19=lib/systray.jar
-wrapper.java.classpath.20=lib/systray4j.jar
+wrapper.java.classpath.19=lib/jbigi.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=.
