* html cleanup * classpath during javadoc
Monotone-Parent: 1612aaeed8fce625e94abef6575472e1d698ca3d
Monotone-Revision: c8891eba35b9d376e14ef04c4365f3d69cdad287

Monotone-Author: jrandom
Monotone-Date: 2004-08-23T21:55:57
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,7 @@
         <mkdir dir="./build/javadoc" />
         <javadoc 
             sourcepath="core/java/src:core/java/test:router/java/src:router/java/test:apps/ministreaming/java/src:apps/i2ptunnel/java/src:apps/httptunnel/java/src:apps/routerconsole/java/src" 
-            classpath="apps/jetty/jettylib/org.mortbay.jetty.jar" 
+            classpath="apps/jetty/jettylib/org.mortbay.jetty.jar:installer/lib/wrapper/win32/wrapper.jar" 
             destdir="./build/javadoc" 
             packagenames="*" 
             use="true" 
