--- a/apps/systray/java/build.xml
+++ b/apps/systray/java/build.xml
@@ -19,17 +19,11 @@
             classpath="./lib/systray4j.jar:../../../core/java/build/i2p.jar" />
     </target>
     <target name="jar" depends="compile">
-        <copy todir="./build/lib">
-            <fileset dir="./lib" includes="systray4j.dll systray4j.jar" />
-        </copy>
-        <copy todir="./build/icons">
-            <fileset dir="./resources/" />
-        </copy>
         <mkdir dir="./build/jar_temp" />
         <copy todir="./build/jar_temp">
             <fileset dir="./build/obj" includes="**/*.class" />
         </copy>
-        <jar destfile="./build/lib/systray.jar" basedir="./build/jar_temp" includes="**/*">
+        <jar destfile="./build/systray.jar" basedir="./build/jar_temp" includes="**/*">
             <manifest>
                 <attribute name="Main-Class" value="net.i2p.apps.systray.SysTray" />
                 <attribute name="Class-Path" value="systray4j.jar" />
