* moving wrapper scripts to installer/resources * added wrapper files to the 'installer' target of the global build.xml
Monotone-Parent: 781c915e4bc49975b29dc9c739b9c28cd1068c82
Monotone-Revision: 21a97907dfdfe24fee04bc673a51cc4cde426c79

Monotone-Author: hypercubus
Monotone-Date: 2004-08-24T12:25:46
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -219,8 +219,16 @@
         <copy file="build/i2ptunnel.war" todir="pkg-temp/webapps/" />
         <copy file="build/routerconsole.war" todir="pkg-temp/webapps/" />
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
+        <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/i2ptunnel.config" todir="pkg-temp/" />
+        <copy file="installer/resources/install_i2p_service_unix" todir="pkg-temp/" />
+        <copy file="installer/resources/install_i2p_service_winnt.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/systray.config" todir="pkg-temp/" />
+        <copy file="installer/resources/uninstall_i2p_service_unix" todir="pkg-temp/" />
+        <copy file="installer/resources/uninstall_i2p_service_winnt.bat" todir="pkg-temp/" />
+        <copy file="installer/resources/wrapper.conf" todir="pkg-temp/" />
         <copy file="readme.txt" todir="pkg-temp/" />
     </target>
     <target name="tarball" depends="preppkg">
