--- a/apps/sam/c/examples/warhammer/Makefile.mingw
+++ b/apps/sam/c/examples/warhammer/Makefile.mingw
@@ -15,7 +15,7 @@ RM = C:\Dev-Cpp\bin\rm
 
 CFLAGS = -g -O2 -pipe -std=c99 -Wall
 CFLAGS += -DWINSOCK
-CFLAGS += -I../inc -L../lib
+CFLAGS += -I../../inc -L../../lib
 LIBS = -lsam -lwsock32
 
 #
