--- a/apps/sam/c/examples/warhammer/Makefile.posix
+++ b/apps/sam/c/examples/warhammer/Makefile.posix
@@ -14,7 +14,7 @@ RM = rm
 #
 
 CFLAGS = -g -O2 -pipe -std=c99 -Wall
-CFLAGS += -I../inc -L../lib
+CFLAGS += -I../../inc -L../../lib
 LIBS = -lsam
 
 #
