--- a/build.xml
+++ b/build.xml
@@ -247,7 +247,7 @@
             <fileset dir="installer/lib/wrapper/win32/" />
         </copy>
         <copy file="hosts.txt" todir="pkg-temp/" />
-        <copy file="readme.txt" todir="pkg-temp/" />
+        <copy file="readme.html" todir="pkg-temp/" />
     </target>
     <target name="tarball" depends="preppkg">
         <tar compression="bzip2" destfile="i2p.tar.bz2">
