added 'port' preference for specification of the router console's listening port
Monotone-Parent: 3c27eba82e0a487ea99c810f227eae21468e01b0
Monotone-Revision: 3adf46fa2bae1e29865b692015107c5e0bcfb0d3

Monotone-Author: hypercubus
Monotone-Date: 2004-08-31T21:08:00
Monotone-Branch: i2p.i2p

--- a/installer/resources/systray.config
+++ b/installer/resources/systray.config
@@ -9,3 +9,6 @@
 # If you set this value to 'default', systray will attempt to identify and use
 # your system's default browser.
 browser=default
+
+# The port the router console listens on.
+port=7657
