--- a/build.xml
+++ b/build.xml
@@ -10,14 +10,15 @@
         <echo message="  dist:      distclean, then build and javadoc (including the web app and associated libs)" />
         <echo message="  prepGUI:   pull the LGPL and APL code for JFreeChart that we use in the GUIs" />
         <echo message="  buildGUI:  build the heartbeat and netmonitor GUIs (must have run prepGUI already)" />
-        <echo message="  buildWEB:  build the router console web application" />
         <echo message="  pkg:       make the tarball and installer jar (depends upon preppkg)" />
         <echo message="  pkgclean:  delete the ./pkg-temp/ dir, tarball and installer jar" />
         <echo message="  preppkg:   gather built files for tarball and installer" />
         <echo message="  tarball:   tar the built files and compress with bz2 (depends upon preppkg)" />
         <echo message="  installer: build the GUI installer (depends upon preppkg)" />
     </target>
-    <target name="dist" depends="distclean, build, buildWEB, javadoc">
+    <target name="dist" depends="distclean, pkg, javadoc">
+    </target>
+    <target name="olddist" depends="distclean, build, buildWEB, javadoc">
         <delete dir="build/lib" />
         <delete dir="build/webapps" />
         <mkdir dir="build/lib" />
@@ -78,6 +79,21 @@
         <ant dir="apps/systray/java/" target="jar" />
         <ant dir="apps/routerconsole/java/" target="jar" />
         <ant dir="installer/java/" target="jar" />
+    </target>
+    <target name="buildWEB">
+        <ant dir="apps/jetty" target="fetchJettylib" />
+        <ant dir="apps/routerconsole/java" target="build" />
+        <copy file="apps/routerconsole/java/build/routerconsole.jar" todir="build/" />
+        <copy file="apps/routerconsole/java/build/routerconsole.war" todir="build/" />
+        <copy file="apps/jetty/jettylib/org.mortbay.jetty.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/ant.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/jasper-compiler.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/jasper-runtime.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/jnet.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/xercesImpl.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/xml-apis.jar" todir="build/" />
+        <copy file="apps/jetty/jettylib/javax.servlet.jar" todir="build/" />
     </target>
     <target name="compile" />
     <target name="jar" depends="compile" >
@@ -160,31 +176,6 @@
         <echo message="To run the netmonitor GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar netviewer.jar" />
         <echo message="To run the heartbeat GUI: java -cp jfreechart-0.9.17.jar:log4j-1.2.8.jar:jcommon-0.9.2.jar -jar heartbeatGUI.jar" />
     </target>
-    <target name="prepWEB">
-        <ant dir="apps/jetty" target="fetchJettylib" />
-    </target>
-    <target name="buildWEB" depends="prepWEB" >
-        <available property="jettylib.available" file="apps/jetty/jettylib" />
-        <ant target="doBuildWEB" />
-    </target>
-    <target name="doBuildWEB" if="jettylib.available">
-        <ant dir="apps/routerconsole/java" target="build" />
-        <copy file="apps/routerconsole/java/build/routerconsole.jar" todir="build/" />
-        <copy file="apps/routerconsole/java/build/routerconsole.war" todir="build/" />
-        <copy file="apps/jetty/jettylib/org.mortbay.jetty.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/org.mortbay.jetty-jdk1.2.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/ant.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/jasper-compiler.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/jasper-runtime.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/jnet.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/xercesImpl.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/xml-apis.jar" todir="build/" />
-        <copy file="apps/jetty/jettylib/javax.servlet.jar" todir="build/" />
-        <echo message="You will need the org.*, ant.jar, jasper-*.jar, jnet.jar, xercesImpl.jar, xml-apis.jar, " />
-        <echo message="and routerconsole.jar in your router's classpath.  In addition, you will need to place the " />
-        <echo message="routerconsole.war file under your i2p install dir as webapps/routerconsole.war and will want " />
-        <echo message="to add the RouterConsoleRunner to the router's clientApp list (it must be in the router's JVM)" />
-    </target>
     <target name="pkg" depends="tarball, installer" />
     <target name="pkgclean">
         <delete dir="pkg-temp" />
@@ -192,7 +183,7 @@
             <fileset dir="." includes="i2p.tar.bz2 install.jar" />
         </delete>
     </target>
-    <target name="preppkg" depends="build, buildWEB">
+    <target name="preppkg" depends="build">
         <copy file="build/ant.jar" todir="pkg-temp/lib/" />
         <copy file="build/heartbeat.jar" todir="pkg-temp/lib/" />
         <copy file="build/i2p.jar" todir="pkg-temp/lib/" />
