need the jettylib to build the war
Monotone-Parent: af610a8b34636af890d867c5a529f9c1e18db296
Monotone-Revision: 74a7f8380c6fcae796807c3aea21660894921d40

Monotone-Author: jrandom
Monotone-Date: 2004-08-31T22:38:00
Monotone-Branch: i2p.i2p

--- a/apps/i2ptunnel/java/build.xml
+++ b/apps/i2ptunnel/java/build.xml
@@ -4,6 +4,7 @@
     <target name="build" depends="builddep, jar" />
     <target name="builddep">
         <ant dir="../../ministreaming/java/" target="build" />
+        <ant dir="../../jetty/" target="build" />
 	<!-- ministreaming will build core -->
     </target>
     <target name="compile">
@@ -15,7 +16,7 @@
             destdir="./build/obj" 
             classpath="../../../core/java/build/i2p.jar:../../ministreaming/java/build/mstreaming.jar" />
     </target>
-    <target name="jar" depends="compile">
+    <target name="jar" depends="builddep, compile">
         <jar destfile="./build/i2ptunnel.jar" basedir="./build/obj" includes="**/*.class">
             <manifest>
                 <attribute name="Main-Class" value="net.i2p.i2ptunnel.I2PTunnel" />
